borsh-derive/src/internals/serialize/enums/snapshots/mixed_with_unit_variants.snap
---
source: borsh-derive/src/internals/serialize/enums/mod.rs
expression: pretty_print_syn_str(actual).unwrap()
---
impl borsh::ser::BorshSerialize for X {
    fn serialize<__W: borsh::io::Write>(
        &self,
        writer: &mut __W,
    ) -> ::core::result::Result<(), borsh::io::Error> {
        let variant_idx: u8 = match self {
            X::A(..) => 0u8,
            X::B => 1u8,
            X::C { .. } => 2u8,
            X::D => 3u8,
        };
        writer.write_all(&variant_idx.to_le_bytes())?;
        match self {
            X::A(id0) => {
                <u16 as borsh::BorshSerialize>::serialize(id0, writer)?;
            }
            X::C { x, y, .. } => {
                <i32 as borsh::BorshSerialize>::serialize(x, writer)?;
                <i32 as borsh::BorshSerialize>::serialize(y, writer)?;
            }
            _ => {}
        }
        ::core::result::Result::Ok(())
    }
}
