borsh-derive/src/internals/serialize/enums/snapshots/simple_enum_with_custom_crate-2.snap
---
source: borsh-derive/src/internals/serialize/enums/mod.rs
expression: pretty_print_syn_str(actual).unwrap()
---
impl reexporter::borsh::ser::BorshSerializeAsync for AB {
    async fn serialize<'async_variant, __W: reexporter::borsh::async_io::AsyncWrite>(
        &'async_variant self,
        writer: &'async_variant mut __W,
    ) -> ::core::result::Result<(), reexporter::borsh::io::Error> {
        let variant_idx: u8 = match self {
            AB::B { .. } => 0u8,
            AB::NegatedVariant { .. } => 1u8,
        };
        writer.write_u8(variant_idx).await?;
        match self {
            AB::B { c, d, .. } => {
                <i32 as reexporter::borsh::BorshSerializeAsync>::serialize(c, writer)
                    .await?;
                <u32 as reexporter::borsh::BorshSerializeAsync>::serialize(d, writer)
                    .await?;
            }
            AB::NegatedVariant { beta, .. } => {
                <String as reexporter::borsh::BorshSerializeAsync>::serialize(
                        beta,
                        writer,
                    )
                    .await?;
            }
        }
        ::core::result::Result::Ok(())
    }
}
